--- a/applications/frontend/app/index.html
+++ b/applications/frontend/app/index.html
@@ -119,7 +119,7 @@
 </div>
 
 <footer>
-    Vyking Gaming Insights — Mock data for developer testing
+    Lau Jorge
 </footer>
 
 <script src="app.js"></script>
